Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>نظام إدارة المشاريع</title>
     <meta key="title" content="نظام إدارة المشاريع" property="og:title" />
     <meta
-      content="اجعل المواقع الجميلة بغض النظر عن تجربتك في التصميم."
+      content="نظام شامل لإدارة المشاريع والمتطلبات والمهام"
       property="og:description"
     />
     <meta
-      content="اجعل المواقع الجميلة بغض النظر عن تجربتك في التصميم."
+      content="نظام شامل لإدارة المشاريع والمتطلبات والمهام"
       name="description"
+    />
+    <meta
+      content="/favicon.png"
+      property="og:image"
     />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
