Refactor requirement and task management: - Moved enums for RequirementStatus, TaskStatus, SprintStatus, and others to a dedicated Enums folder for better organization. - Updated Requirement and Task entities to reference new enums. - Refactored services and repositories to accommodate changes in task and requirement handling. - Removed obsolete code related to task management and updated method signatures accordingly. - Enhanced API configuration to support runtime changes without rebuilds. - Updated front-end components to reflect changes in requirement and task structures.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Runtime configuration - can be modified after deployment -->
+    <script src="/config.js"></script>
     <title>نظام إدارة المشاريع</title>
     <meta key="title" content="نظام إدارة المشاريع" property="og:title" />
     <meta
