--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Runtime configuration - can be modified after deployment -->
-    <script src="/config.js"></script>
+    <!-- Runtime configuration - MUST load synchronously before React app initializes -->
+    <script src="/config.js" defer></script>
     <title>نظام إدارة المشاريع</title>
     <meta key="title" content="نظام إدارة المشاريع" property="og:title" />
     <meta
@@ -30,6 +30,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx" defer></script>
   </body>
 </html>
